<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/name_text">
    </TextView>

    <TextView
        android:id="@+id/company_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/company_text">
    </TextView>

    <TextView
        android:id="@+id/post_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/post_text">
    </TextView>

</LinearLayout>